Improve device tree settings for USB on fsimx6/sx/ul
Use dedicated pins for USB VBUS power where possible. This allows to
remove the regulators. Also improve USB OTG configurations and collect
all USB pad settings in USB pin groups.

In detail:

- Convert all USB VBUS power pads to use the dedicated function
  USB_OTG_PWR and USB_H1_PWR instead of GPIOs. Only NetDCUA9 and
  PicoMODA9 still need to use GPIOs because the dedicated pins are
  not available: NetDCUA9: OTG, PicoMODA9: H1 and OTG.
- Remove USB VBUS power regulators on all boards where VBUS power is
  implemented by the dedicated USB controller power function. Only
  NetDCUA9 and PicoMODA9 still need regulators (see above).
- Add disable-over-current to USB ports where OC pin is not available
- Add CONFIG_*_HAVE_USB_OTG_OC on boards that have OC pin available to
  make its usage configurable.
- Add CONFIG_NETDCUA9_OTG_HOST to define the role of the OTG port on
  NetDCUA9. A similar definition is not necessary on PicoMODA9 because
  even if there is only either host or device role possible, the ID
  pin wil be set by the hardware accordingly.
- Add pinctrl_usbh1 pin group on all boards and move USB hub reset
  signal and H1 VBUS power switch signals there.
- Move OTG VBUS power switch, OC and ID signals to the pinctrl_usbotg
  pin group where not already done.
- On QBlissA9 and PicoMODA9, add support for older board revisions.

The old GPIO based regulators and pad settings still exist but are
commented. They may be removed in the future.

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -154,29 +154,18 @@
 	regulators {
 		compatible = "simple-bus";
 
-		reg_usb_otg_vbus: usb_otg_vbus {
-			compatible = "regulator-fixed";
-			regulator-name = "usb_otg_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			/* No way to switch USB1_OTG_VBUS power */
-			//gpio = <&gpio3 22 0>;
-			//enable-active-high;
-			/* pmic */
-			//vin-supply = <&swbst_reg>;
-		};
 
-		reg_usb_h1_vbus: usb_h1_vbus {
+		/* USB_H1_PWR/USB_OTG_PWR are always on, no regulator needed */
+#if 0 //###
+		reg_usb_vbus: usb_vbus {
 			compatible = "regulator-fixed";
-			regulator-name = "usb_h1_vbus";
+			regulator-name = "usb_vbus";
 			regulator-min-microvolt = <5000000>;
 			regulator-max-microvolt = <5000000>;
-			/* No way to switch USB1_H1_VBUS power */
-			//gpio = <&gpio1 29 0>;
-			//enable-active-high;
-			/* pmic */
-			//vin-supply = <&swbst_reg>;
+			/* No way to switch USB_OTG_VBUS/USB_H1_VBUS power */
+			regulator-always-on;
 		};
+#endif //###
 
 #ifdef CONFIG_ARMSTONEA9_SGTL5000_AUDIO
 		/* SGTL5000 analog voltage */
@@ -1055,15 +1044,18 @@
 };
 #endif /* CONFIG_ARMSTONEA9_UART_C */
 
-&usbh1 {
-	vbus-supply = <&reg_usb_h1_vbus>;
+&usbotg {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usbotg>;
+//###	vbus-supply = <&reg_usb_vbus>;
+	disable-over-current;
 	status = "okay";
 };
 
-&usbotg {
-	vbus-supply = <&reg_usb_otg_vbus>;
+&usbh1 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_usbotg_2>;
+	pinctrl-0 = <&pinctrl_usbh1>;
+//###	vbus-supply = <&reg_usb_vbus>;
 	disable-over-current;
 	status = "okay";
 };
@@ -1227,9 +1219,6 @@
 				/* camera reset - active low */
 				MX6QDL_PAD_CSI0_DAT5__GPIO5_IO23	0x17059
 
-				/* USB_HUB_RESET, value from U-Boot */
-				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x1b0b0
-
 				/* RTC_IRQ */
 				MX6QDL_PAD_ENET_TX_EN__GPIO1_IO28	0xb0b0
 			>;
@@ -1367,10 +1356,19 @@
 			>;
 		};
 
-		pinctrl_usbotg_2: usbotggrp {
+		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
-			/* Board must have R45 as 10 Ohm and R46 not equipped */
-				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 	0x17059
+				/* USB_OTG_ID: low: host, open: device */
+				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 	0x1b000
+				/* USB OTG host power is always on */
+			>;
+		};
+
+		pinctrl_usbh1: usbh1grp {
+			fsl,pins = <
+				/* USB hub reset line, active low */
+				MX6QDL_PAD_GPIO_17__GPIO7_IO12		0x0b0b0
+				/* USB H1 host power is always on */
 			>;
 		};
 
