--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -146,25 +146,28 @@
 	regulators {
 		compatible = "simple-bus";
 
+		/* USB_OTG_PWR handled by USB controller, no regulator needed */
+#if 0 //###
 		reg_usb_otg_vbus: usb_otg_vbus {
 			compatible = "regulator-fixed";
 			regulator-name = "usb_otg_vbus";
 			regulator-min-microvolt = <5000000>;
 			regulator-max-microvolt = <5000000>;
-			/* No way to switch USB1_OTG_VBUS power */
-			//gpio = <&gpio3 22 0>;
-			//enable-active-high;
+			gpio = <&gpio3 22 0>;
 		};
+#endif //###
 
+		/* USB_H1_PWR handled by USB controller, no regulator needed */
+#if 0 //###
 		reg_usb_h1_vbus: usb_h1_vbus {
 			compatible = "regulator-fixed";
 			regulator-name = "usb_h1_vbus";
 			regulator-min-microvolt = <5000000>;
 			regulator-max-microvolt = <5000000>;
-			/* No way to switch USB1_H1_VBUS power */
-			//gpio = <&gpio1 29 0>;
-			//enable-active-high;
+			gpio = <&gpio3 31 0>;
+			enable-active-high;
 		};
+#endif //###
 
 #ifdef CONFIG_EFUSA9_SGTL5000_AUDIO
 		/* SGTL5000 analog voltage */
@@ -930,15 +933,24 @@
 };
 #endif /* CONFIG_EFUSA9_UART_D */
 
-&usbh1 {
-	vbus-supply = <&reg_usb_h1_vbus>;
+&usbotg {
+	/* On efus-SKIT, OTG power is active low */
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usbotg>;
+//###	vbus-supply = <&reg_usb_otg_vbus>;
+#ifdef CONFIG_EFUSA9_HAVE_USB_OTG_OC
+	over-current-active-low;
+#else
+	disable-over-current;
+#endif
 	status = "okay";
 };
 
-&usbotg {
-	vbus-supply = <&reg_usb_otg_vbus>;
+&usbh1 {
 	pinctrl-names = "default";
-	pinctrl-0 = <&pinctrl_usbotg_2>;
+	pinctrl-0 = <&pinctrl_usbh1>;
+//###	vbus-supply = <&reg_usb_h1_vbus>;
+	pwr-active-high;
 	disable-over-current;
 	status = "okay";
 };
@@ -1351,9 +1363,25 @@
 			>;
 		};
 
-		pinctrl_usbotg_2: usbotggrp {
+		pinctrl_usbotg: usbotggrp {
 			fsl,pins = <
-				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 	0x17059
+				/* USB_OTG_PWR, active low */
+//###				MX6QDL_PAD_EIM_D22__GPIO3_IO22		0x0b030
+				MX6QDL_PAD_EIM_D22__USB_OTG_PWR		0x0b030
+#ifdef CONFIG_EFUSA9_HAVE_USB_OTG_OC
+				/* USB_OTG_OC, active low */
+				MX6QDL_PAD_EIM_D21__USB_OTG_OC		0x1b000
+#endif
+				/* USB_OTG_ID: low: host, open: device */
+				MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 	0x1b000
+			>;
+		};
+
+		pinctrl_usbh1: usbh1grp {
+			fsl,pins = <
+				/* USB_H1_PWR, active high */
+//###				MX6QDL_PAD_EIM_D31__GPIO3_IO31		0x03030
+				MX6QDL_PAD_EIM_D31__USB_H1_PWR		0x03030
 			>;
 		};
 
