--- a/arch/arm/boot/dts/cubea7ul.dts
+++ b/arch/arm/boot/dts/cubea7ul.dts
@@ -9,6 +9,9 @@
 /* CMA: Set 64 MB for Continuous Memory Allocator */
 #define CONFIG_CUBEA7UL_CMA_SIZE 0x4000000
 
+/* Set if USB OTG2 has power switch with over-current detection equipped */
+//#define CONFIG_CUBEA7UL_HAVE_USB_OTG2_PWR_OC
+
 /dts-v1/;
 
 #include <dt-bindings/input/input.h>
@@ -95,13 +98,21 @@
 			enable-active-high;
 		};
 
+		/* USB_OTG2_PWR done by USB controller, no regulator needed */
+#if 0 //###
 		reg_usb_otg2_vbus: usb_otg2_vbus {
 			compatible = "regulator-fixed";
 			regulator-name = "usb_otg2_vbus";
 			regulator-min-microvolt = <5000000>;
 			regulator-max-microvolt = <5000000>;
+#ifdef CONFIG_CUBEA7UL_HAVE_USB_OTG2_PWR_OC
+			gpio = <&gpio1 2 0>;
+			enable-active-high;
+#else
 			regulator-always-on;
+#endif
 		};
+#endif //###
 
 		reg_camera_dovdd: camera_dovdd {
 			compatible = "regulator-fixed";
@@ -216,9 +227,16 @@
 };
 
 &usbotg2 {
-	vbus-supply = <&reg_usb_otg2_vbus>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usbotg2>;
+//###	vbus-supply = <&reg_usb_otg2_vbus>;
 	dr_mode = "host";
+#ifdef CONFIG_CUBEA7UL_HAVE_USB_OTG2_PWR_OC
+	pwr-active-high;
+	over-current-active-low;
+#else
 	disable-over-current;
+#endif
 	status = "okay";
 };
 
@@ -422,6 +440,18 @@
 				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1	0x170f9
 				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2	0x170f9
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3	0x170f9
+			>;
+		};
+
+		pinctrl_usbotg2: usbotg2grp {
+			fsl,pins = <
+#ifdef CONFIG_CUBEA7UL_HAVE_USB_OTG2_PWR_OC
+				/* USB_OTG2_PWR, active high */
+//###				MX6UL_PAD_GPIO1_IO02__GPIO1_IO02	0x03030
+				MX6UL_PAD_GPIO1_IO02__USB_OTG2_PWR	0x03030
+				/* USB_OTG2_OC, active low */
+				MX6UL_PAD_GPIO1_IO03__USB_OTG2_OC	0x1b000
+#endif
 			>;
 		};
 
