Add auxiliary core linux driver support
Add linux driver support for auxiliary core. The driver creates
different sysfs entrys mem (load file into), mem_addr (address where the
file will be stored) and bootaux (start, stop auxiliary core). The sysfs
entrys will be created in /sys/devices/system/cpu/aux_core. You find the
description of the different commands, which you can use, under
Documentation auxiliary_core.txt.

--- a/drivers/base/Kconfig
+++ b/drivers/base/Kconfig
@@ -213,6 +213,17 @@ config DEBUG_DEVRES
 
 	  If you are unsure about this, Say N here.
 
+config AUXILIARY_CORE
+	bool "Support Auxiliary Core (/sys/devices/system/cpu/aux_core)"
+	depends on SOC_IMX6SX
+	default n
+	help
+	  The auxiliary core supports to start stop and load the auxiliary core
+	  from the linux. It is in a subdirectory of /sys.
+
+	  If you are not using a board or module from F&S Elektronik Systeme,
+	  you can safely say N.
+
 config SYS_HYPERVISOR
 	bool
 	default n
