Add mono2both flag to device trees
Improve every device tree which dont have set this flag. This flag is
only needed for audio sgtl5000 chip. So we set it to all device trees
which have the audio sgtl5000 chip.

--- a/arch/arm/boot/dts/efusa9qdl.dtsi
+++ b/arch/arm/boot/dts/efusa9qdl.dtsi
@@ -647,6 +647,7 @@
 	sgtl5000: sgtl5000@0a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
+		mono2both;
 		/* derived from IMX6QDL_CLK_CKO2 */
 		clocks = <&clks IMX6QDL_CLK_CKO>;
 		VDDA-supply = <&reg_sgtl5000_vdda>;
