Add iram setting to dma_apbh on fsimx6/sx/ul
The newest version of the F&S mxs-dma-ext.c driver has support for
locating the DMA descriptors to internal SRAM (iram), e.g. OCRAM.
This is similar to how sdma allocates its descriptors. So we also
need a line

  iram = <&ocram>;

in the dma_apbh device tree node. Add this line to all F&S boards
and modules based on i.MX6, i.MX6SX and i.MX6UL.

This is:

- armstonea9qdl.dtsi
- armstonea9r2qdl.dtsi
- efusa9qdl.dtsi
- netdcua9qdl.dtsi
- picomoda9qdl.dtsi
- qblissa9qdl.dtsi
- qblissa9r2qdl.dtsi
- efusa9x.dts
- picocoma9x.dts
- efusa7ul.dts
- picocom1.2.dts
- and a few customer specific boards

--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -745,6 +745,7 @@
 &dma_apbh {
 	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
 	compatible = "fus,imx6q-dma-apbh", "fus,imx28-dma-apbh";
+	iram = <&ocram>;
 };
 
 #ifdef CONFIG_ARMSTONEA9R2_NAND
