--- a/arch/arm/boot/dts/cube2.0.dts
+++ b/arch/arm/boot/dts/cube2.0.dts
@@ -225,6 +225,7 @@
 &dma_apbh {
 	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
 	compatible = "fus,imx6ul-dma-apbh", "fus,imx28-dma-apbh";
+	iram = <&ocram>;
 };
 
 &gpmi {
