--- a/arch/arm/boot/dts/gar1.dts
+++ b/arch/arm/boot/dts/gar1.dts
@@ -275,6 +275,7 @@
 &dma_apbh {
 	/* Switch to F&S implementation of APBH DMA driver for GPMI (NAND) */
 	compatible = "fus,imx6ul-dma-apbh", "fus,imx28-dma-apbh";
+	iram = <&ocram>;
 };
 
 #ifdef CONFIG_GAR1_NAND
